friday morning commit

--- a/resources/style.css
+++ b/resources/style.css
@@ -112,7 +112,7 @@ footer {
     background-color: #eee;
 }
 
-#loginOptions {
+#accountOptions {
     text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
